# 3D-Renderer

./: .gitignore  CMakeLists.txt
src/: Graphics.cpp  Graphics.hpp  ModelLoader.cpp  ModelLoader.hpp  main.cpp
src/Math/: Math.cpp  Math.hpp  Matrix.cpp  Matrix.hpp
src/Render3D/: .Struct.cpp.swp  ModelRenderer.cpp  Projection.cpp  Rasterizer.cpp  Render3D.cpp  Render3D.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Struct.cpp  Structs.hpp
src/Renderer/: Rasterizer.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp
